Line wrap prevention for item notes header.

--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -277,6 +277,7 @@ h3 {
 }
 table.item-notes {
   td,th { vertical-align: top; }
+  th { white-space: nowrap; }
 }
 .tagList {
   .tag {
